# ros_testing_demo_pkg

./: .travis.yml  CMakeLists.txt  bitbucket-pipelines.yml  package.xml  readme.md  rebase_all.sh  setup.py
.github/workflows/: ci-noetic.yml
include/ros_testing_demo_pkg/: func_covered_by_unittest_gtest.h  func_not_covered.h
src/: func_covered_by_unittest_gtest.cpp  func_not_covered.cpp  substract.cpp
src/ros_testing_demo_pkg/: func_covered_by_nosetest.py  func_not_covered.py  multiply.py
test/: unittest_add.cpp  unittest_gtest.cpp  unittest_multiply.py  unittest_nosetest.py
